--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -10,7 +10,11 @@ on:
 
 env:
   AWS_REGION: eu-central-1
-  TF_VERSION: 1.14.0
+  TF_VERSION: 1.14.3
+  TF_VARS_rmq_username: ${{ secrets.RMQ_USERNAME }}
+  TF_VARS_rmq_password: ${{ secrets.RMQ_PASSWORD }}
+  TF_VARS_docdb_username: ${{ secrets.DOCDB_USERNAME }}
+  TF_VARS_docdb_password: ${{ secrets.DOCDB_PASSWORD }}
 
 permissions:
   id-token: write
@@ -119,61 +123,61 @@ jobs:
         working-directory: ./global
         run: terraform apply -auto-approve tfplan
 
-  # infrastructure:
-  #   name: Infrastructure
-  #   runs-on: ubuntu-latest
-  #   needs: global
-  #   
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
-  #
-  #     - name: Configure AWS credentials
-  #       uses: aws-actions/configure-aws-credentials@v4
-  #       with:
-  #         role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/SmartBinGithubActionsRole
-  #         aws-region: ${{ env.AWS_REGION }}
-  #         role-session-name: GitHubActions-Infrastructure
-  #
-  #     - name: Setup Terraform
-  #       uses: hashicorp/setup-terraform@v3
-  #       with:
-  #         terraform_version: ${{ env.TF_VERSION }}
-  #
-  #     - name: Cache Terraform providers
-  #       uses: actions/cache@v4
-  #       with:
-  #         path: ~/.terraform.d/plugin-cache
-  #         key: ${{ runner.os }}-terraform-${{ hashFiles('**/.terraform.lock.hcl') }}
-  #         restore-keys: |
-  #           ${{ runner.os }}-terraform-
-  #
-  #     - name: Configure Terraform plugin cache
-  #       run: |
-  #         mkdir -p ~/.terraform.d/plugin-cache
-  #         echo 'plugin_cache_dir = "$HOME/.terraform.d/plugin-cache"' > ~/.terraformrc
-  #
-  #     - name: Terraform Init
-  #       working-directory: ./
-  #       run: terraform init
-  #
-  #     - name: Terraform Validate
-  #       working-directory: ./
-  #       run: terraform validate
-  #
-  #     - name: Terraform Plan
-  #       working-directory: ./
-  #       run: terraform plan -out=tfplan
-  #
-  #     - name: Terraform Apply
-  #       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-  #       working-directory: ./
-  #       run: terraform apply -auto-approve tfplan
+  infrastructure:
+    name: Infrastructure
+    runs-on: ubuntu-latest
+    needs: global
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+  
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/SmartBinGithubActionsRole
+          aws-region: ${{ env.AWS_REGION }}
+          role-session-name: GitHubActions-Infrastructure
+  
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: ${{ env.TF_VERSION }}
+  
+      - name: Cache Terraform providers
+        uses: actions/cache@v4
+        with:
+          path: ~/.terraform.d/plugin-cache
+          key: ${{ runner.os }}-terraform-${{ hashFiles('**/.terraform.lock.hcl') }}
+          restore-keys: |
+            ${{ runner.os }}-terraform-
+  
+      - name: Configure Terraform plugin cache
+        run: |
+          mkdir -p ~/.terraform.d/plugin-cache
+          echo 'plugin_cache_dir = "$HOME/.terraform.d/plugin-cache"' > ~/.terraformrc
+  
+      - name: Terraform Init
+        working-directory: ./
+        run: terraform init
+  
+      - name: Terraform Validate
+        working-directory: ./
+        run: terraform validate
+  
+      - name: Terraform Plan
+        working-directory: ./
+        run: terraform plan -out=tfplan
+  
+      - name: Terraform Apply
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        working-directory: ./
+        run: terraform apply -auto-approve tfplan
 
   summary:
     name: Summary
     runs-on: ubuntu-latest
-    needs: [bootstrap, global]  # Add 'infrastructure' when uncommented
+    needs: [bootstrap, global, infrastructure]  # Add 'infrastructure' when uncommented
     if: always()
     
     steps:
