fix: add jwt secret to the Github Actions pipeline

--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -15,6 +15,7 @@ env:
   TF_VARS_rmq_password: ${{ secrets.RMQ_PASSWORD }}
   TF_VARS_docdb_username: ${{ secrets.DOCDB_USERNAME }}
   TF_VARS_docdb_password: ${{ secrets.DOCDB_PASSWORD }}
+  TF_VARS_jwt_secret: ${{ secrets.JWT_SECRET }}
 
 permissions:
   id-token: write
